--- a/app/src/main/res/layout/eskills_info_section_scrollable.xml
+++ b/app/src/main/res/layout/eskills_info_section_scrollable.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     >
-  <androidx.core.widget.NestedScrollView
+  <HorizontalScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:orientation="horizontal"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
+      android:scrollbars="none"
       >
     <LinearLayout
         android:layout_width="wrap_content"
@@ -39,5 +40,5 @@
           layout="@layout/eskills_info_card5"
           />
     </LinearLayout>
-  </androidx.core.widget.NestedScrollView>
+  </HorizontalScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
