--- a/app/src/main/res/layout/fragment_eskills_info.xml
+++ b/app/src/main/res/layout/fragment_eskills_info.xml
@@ -1,4 +1,4 @@
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,8 +8,9 @@
 
   <ScrollView
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      app:layout_behavior="@string/appbar_scrolling_view_behavior"
+      android:layout_height="0dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/action_bar"
       >
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,17 +44,16 @@
             android:layout_marginHorizontal="32dp"
             android:layout_marginTop="16dp"
             android:lines="2"
-            android:text="Are your gaming skills worth a real-money prize?"
+            android:text="@string/eskills_v2_page_body_"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/bundle_image"
             />
       </androidx.constraintlayout.widget.ConstraintLayout>
-<<<<<<< HEAD
 
       <include
-          android:id="@+id/value_proposition_card_1"
+          android:id="@+id/values_stats"
           layout="@layout/eskills_values_stats_scrollable"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
@@ -67,44 +67,34 @@
           android:layout_marginHorizontal="16dp"
           />
       <include
-          android:layout_marginTop="40dp"
           android:id="@+id/games"
+          layout="@layout/eskills_learn_more_games"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          layout="@layout/eskills_learn_more_games"
+          android:layout_marginTop="40dp"
           />
       <include
-
           layout="@layout/eskills_info_section_scrollable"
-          android:layout_marginStart="8dp"
-=======
-      <include
-          android:id="@+id/value_proposition_card_1"
-          android:layout_marginTop="24dp"
-          layout="@layout/eskills_value_proposition_scrollable"
->>>>>>> origin/feature/APP-2042-eskills-more-page
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:layout_marginStart="8dp"
           />
 
-<<<<<<< HEAD
       <include
           layout="@layout/eskills_flow_graphic"
-          android:layout_marginTop="56dp"
-          android:layout_marginStart="8dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
+          android:layout_marginStart="8dp"
+          android:layout_marginTop="56dp"
           />
       <include
+          android:id="@+id/eskills_faqs"
           layout="@layout/eskills_faqs"
-          android:layout_marginTop="56dp"
-          android:layout_marginStart="8dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
+          android:layout_marginHorizontal="16dp"
+          android:layout_marginVertical="56dp"
           />
-=======
->>>>>>> origin/feature/APP-2042-eskills-more-page
-
     </LinearLayout>
   </ScrollView>
   <cm.aptoide.aptoideviews.errors.ErrorView
@@ -122,11 +112,11 @@
       layout="@layout/app_bar_layout"
       />
 
-<<<<<<< HEAD
-
-
-=======
->>>>>>> origin/feature/APP-2042-eskills-more-page
-  <include layout="@layout/partial_view_progress_bar" />
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+  <include
+      layout="@layout/partial_view_progress_bar"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      />
+</androidx.constraintlayout.widget.ConstraintLayout>
