--- a/app/src/main/res/layout/eskills_faqs.xml
+++ b/app/src/main/res/layout/eskills_faqs.xml
@@ -1,27 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
+    android:orientation="vertical"
     >
   <TextView
       android:id="@+id/eskills_faqs_title"
       style="@style/Aptoide.TextView.Medium.L.White"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginStart="16dp"
-      android:text="FAQs"
+      android:text="@string/eskills_v2_faqs_title"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
+      android:layout_marginBottom="24dp"
       />
 
-  <ExpandableListView
+  <include
+      android:id="@+id/eskills_faqs_item_1"
+      layout="@layout/eskills_faqs_item"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="24dp"
       app:layout_constraintTop_toBottomOf="@id/eskills_faqs_title"
-    />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+      />
+  <include
+      android:id="@+id/eskills_faqs_item_2"
+      layout="@layout/eskills_faqs_item"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
+      app:layout_constraintTop_toBottomOf="@id/eskills_faqs_title"
+      />
+  <include
+      android:id="@+id/eskills_faqs_item_3"
+      layout="@layout/eskills_faqs_item"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
+      app:layout_constraintTop_toBottomOf="@id/eskills_faqs_title"
+      />
+</LinearLayout>
