--- a/app/src/main/res/layout/eskills_info_card1.xml
+++ b/app/src/main/res/layout/eskills_info_card1.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="18sp"
-            android:text="Real Money Prizes"
+            android:text="@string/eskills_v2_card_5_title"
             android:textColor="#6200F9"
             app:layout_constraintTop_toTopOf="parent"
             />
@@ -29,5 +29,5 @@
             android:layout_marginHorizontal="24dp"
             android:gravity="center"
             app:layout_constraintTop_toBottomOf="@id/card_title"
-            android:text="Play your favorite games and start earning real money now!"            />
+            android:text="@string/eskills_v2_card_5_body"            />
 </androidx.constraintlayout.widget.ConstraintLayout>
