--- a/app/src/main/res/layout/eskills_info_card2.xml
+++ b/app/src/main/res/layout/eskills_info_card2.xml
@@ -15,7 +15,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
-      android:text="Fair competition"
+      android:text="@string/eskills_v2_card_6_title"
       android:textColor="@color/yellow_eskills"
       android:textSize="18sp"
       app:layout_constraintTop_toTopOf="parent"
@@ -36,7 +36,7 @@
       android:layout_marginHorizontal="24dp"
       android:layout_marginBottom="8dp"
       android:gravity="center"
-      android:text="Get matched with players of your skills level to ensure fair tournaments."
+      android:text="@string/eskills_v2_card_6_body"
       app:layout_constraintTop_toBottomOf="@id/guideline"
       app:layout_constraintBottom_toBottomOf="parent"
       />
