--- a/app/src/main/res/layout/eskills_info_card3.xml
+++ b/app/src/main/res/layout/eskills_info_card3.xml
@@ -24,7 +24,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
-      android:text="Become the World\n Winner"
+      android:text="@string/eskills_v2_card_7_title"
       android:lines="2"
       android:textColor="#6200F9"
       android:textSize="18sp"
@@ -39,7 +39,7 @@
       android:layout_marginHorizontal="24dp"
       android:layout_marginBottom="8dp"
       android:gravity="center"
-      android:text="Get extra rewards for reaching the top of our daily and weekly leaderboards."
+      android:text="@string/eskills_v2_card_7_body"
       app:layout_constraintTop_toBottomOf="@id/card_title"
       />
 </androidx.constraintlayout.widget.ConstraintLayout>
