--- a/app/src/main/res/layout/eskills_apps_bundle_item.xml
+++ b/app/src/main/res/layout/eskills_apps_bundle_item.xml
@@ -46,7 +46,7 @@
         android:drawablePadding="6dp"
         android:layout_marginStart="112dp"
         android:textStyle="bold"
-        android:text="Real Money Prizes!"
+        android:text="@string/eskills_v2_home_card_title"
         app:layout_constraintStart_toStartOf="@id/eskills_art"
         app:layout_constraintEnd_toStartOf="@id/bundle_more"
         app:layout_constraintTop_toTopOf="@id/eskills_logo"
@@ -64,7 +64,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
-        android:text="In e-Skills games you get rewarded when beating other players. Show off your skills now!"
+        android:text="@string/eskills_v2_home_card_body"
         android:lineSpacingExtra="4sp"
         />
     <android.widget.Button
