--- a/app/src/main/res/layout/eskills_info_card1.xml
+++ b/app/src/main/res/layout/eskills_info_card1.xml
@@ -29,5 +29,6 @@
             android:layout_marginHorizontal="24dp"
             android:gravity="center"
             app:layout_constraintTop_toBottomOf="@id/card_title"
-            android:text="@string/eskills_v2_card_5_body"            />
+            android:text="@string/eskills_v2_card_5_body"
+            />
 </androidx.constraintlayout.widget.ConstraintLayout>
