--- a/app/src/main/res/layout/eskills_info_card1.xml
+++ b/app/src/main/res/layout/eskills_info_card1.xml
@@ -22,7 +22,7 @@
             />
         <TextView
             android:id="@+id/value_proposition_card_body"
-            style="@style/Aptoide.TextView.Regular.S.Black"
+            style="@style/Aptoide.TextView.Regular.S"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -30,5 +30,6 @@
             android:gravity="center"
             app:layout_constraintTop_toBottomOf="@id/card_title"
             android:text="@string/eskills_v2_card_5_body"
+            android:textColor="@color/black"
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
