--- a/app/src/main/res/layout/eskills_info_card3.xml
+++ b/app/src/main/res/layout/eskills_info_card3.xml
@@ -33,7 +33,7 @@
       />
   <TextView
       android:id="@+id/value_proposition_card_body"
-      style="@style/Aptoide.TextView.Regular.S.Black"
+      style="@style/Aptoide.TextView.Regular.S"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginHorizontal="24dp"
@@ -41,5 +41,6 @@
       android:gravity="center"
       android:text="@string/eskills_v2_card_7_body"
       app:layout_constraintTop_toBottomOf="@id/card_title"
+      android:textColor="@color/black"
       />
 </androidx.constraintlayout.widget.ConstraintLayout>
