[APP-2042] recycler view progress

--- a/app/src/main/res/layout/eskills_learn_more_games.xml
+++ b/app/src/main/res/layout/eskills_learn_more_games.xml
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:text="see all"
+        android:text="@string/see_more"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         style="@style/Aptoide.Button.Flat.White"
