--- a/app/src/main/res/layout/rating_label.xml
+++ b/app/src/main/res/layout/rating_label.xml
@@ -13,6 +13,7 @@
     >
 
   <ImageView
+      android:id="@+id/rating_icon"
       android:layout_width="10dp"
       android:layout_height="10dp"
       android:layout_gravity="center_vertical"
