--- a/app/src/main/res/layout/eskills_learn_more_games.xml
+++ b/app/src/main/res/layout/eskills_learn_more_games.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     >
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/header"
@@ -31,18 +32,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         style="@style/Aptoide.Button.Flat.White"
-        /><!--TODO string-->
+        />
   </androidx.constraintlayout.widget.ConstraintLayout>
   <cm.aptoide.aptoideviews.recyclerview.GridRecyclerView
       android:id="@+id/apps_list"
       android:layout_width="match_parent"
-      android:layout_height="0dp"
+      android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:clipToPadding="false"
       android:layoutAnimation="@anim/grid_list_apps_anim"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/header"
+      android:nestedScrollingEnabled="false"
+      />
+  <cm.aptoide.aptoideviews.errors.ErrorView
+      android:id="@+id/error_view"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:visibility="gone"
+      app:layout_constraintTop_toBottomOf="@id/header"
+      android:theme="@style/AptoideThemeDark"
+      />
+  <include
+      layout="@layout/partial_view_progress_bar"
+      app:layout_constraintTop_toBottomOf="@id/header"      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:theme="@style/AptoideThemeDark"
       />
 </androidx.constraintlayout.widget.ConstraintLayout>
