--- a/app/src/main/res/drawable/ic_twitter_light.xml
+++ b/app/src/main/res/drawable/ic_twitter_light.xml
@@ -1,9 +1,22 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="30.673dp"
-    android:height="30.673dp"
-    android:viewportWidth="30.673"
-    android:viewportHeight="30.673">
+    android:width="32dp"
+    android:height="32dp"
+    android:viewportWidth="32"
+    android:viewportHeight="32">
   <path
-      android:fillColor="#000001"
-      android:pathData="M15.337,0A15.337,15.337 0,1 0,30.673 15.337,15.338 15.338,0 0,0 15.337,0ZM22.337,11.958q0.01,0.226 0.01,0.455A9.948,9.948 0,0 1,12.333 22.429h0a9.964,9.964 0,0 1,-5.4 -1.581,7.159 7.159,0 0,0 0.84,0.049 7.063,7.063 0,0 0,4.372 -1.507,3.524 3.524,0 0,1 -3.289,-2.445 3.508,3.508 0,0 0,1.59 -0.06,3.521 3.521,0 0,1 -2.824,-3.451c0,-0.016 0,-0.03 0,-0.045a3.5,3.5 0,0 0,1.594 0.44,3.523 3.523,0 0,1 -1.09,-4.7 9.994,9.994 0,0 0,7.256 3.678,3.522 3.522,0 0,1 6,-3.21 7.061,7.061 0,0 0,2.235 -0.854,3.534 3.534,0 0,1 -1.548,1.947 7.021,7.021 0,0 0,2.021 -0.554A7.154,7.154 0,0 1,22.339 11.958ZM22.337,11.958" />
+      android:pathData="M16,16m-16,0a16,16 0,1 1,32 0a16,16 0,1 1,-32 0"
+      android:fillColor="#171717"/>
+  <path
+      android:pathData="M17.372,14.991L16.733,14.065L12.549,8H8L14.188,17.053L14.826,17.986L18.936,24H23.586L17.372,14.991ZM15.506,17.186L14.868,16.254L9.919,9.013H12.017L16.053,14.864L16.692,15.791L21.656,22.987H19.471L15.506,17.186Z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M14.868,16.254L15.506,17.186L14.826,17.986L9.713,24H8.27L14.188,17.053L14.868,16.254Z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M23.316,8L17.372,14.991L16.692,15.791L16.053,14.864L16.733,14.065L21.9,8H23.316Z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M14.96,16.3L15.481,17.061L15.514,17.022L19.524,22.887H21.465L16.566,15.785L16.6,15.745L16.078,14.988L16.045,15.028L11.965,9.113H10.109L14.994,16.26L14.96,16.3ZM19.471,22.987H21.656L12.017,9.013H9.919L19.471,22.987ZM14.188,17.053L8.27,24H9.713L14.826,17.986L18.936,24H23.586L17.372,14.991L23.316,8H21.9L16.733,14.065L12.549,8H8L14.188,17.053ZM14.062,17.046L7.811,7.9H12.602L16.741,13.901L21.854,7.9H23.532L17.498,14.998L23.777,24.1H18.883L14.817,18.151L9.759,24.1H8.053L14.062,17.046Z"
+      android:fillColor="#ffffff"
+      android:fillType="evenOdd"/>
 </vector>
