--- a/app/src/main/res/layout/eskills_app_home_item.xml
+++ b/app/src/main/res/layout/eskills_app_home_item.xml
@@ -7,8 +7,8 @@
     android:clickable="true"
     android:focusable="true"
     app:cardCornerRadius="8dp"
+    android:foreground="?android:attr/selectableItemBackground"
     >
-
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
