--- a/app/src/main/res/layout/eskills_apps_bundle_item.xml
+++ b/app/src/main/res/layout/eskills_apps_bundle_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/eskills_apps_bundle_item_linear_layout"
+    android:id="@+id/eskills_apps_bundle_item_constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
@@ -11,46 +11,35 @@
     android:orientation="vertical"
     android:paddingBottom="24dp"
     >
+  <ImageView
+      android:id="@+id/bundle_image"
+      android:layout_width="136dp"
+      android:layout_height="150dp"
+      android:scaleType="fitStart"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      android:src="@drawable/eskills_art_with_ic"
+      android:contentDescription="@null"
+      />
 
   <androidx.constraintlayout.widget.ConstraintLayout
+      android:id="@+id/bundle_header"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      app:layout_constraintTop_toTopOf="parent"
     >
-    <ImageView
-        android:id="@+id/eskills_logo"
-        android:layout_width="32dp"
-        android:layout_height="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/bundle_title"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="24dp"
-        android:src="@drawable/ic_eskills"
-        android:elevation="1dp"
-        android:contentDescription="@null"
-        />
-    <ImageView
-        android:id="@+id/eskills_art"
-        android:layout_width="136dp"
-        android:layout_height="120dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/eskills_logo"
-        android:layout_marginTop="8dp"
-        android:src="@mipmap/eskills_art_foreground"
-        android:contentDescription="@null"
-        />
     <TextView
         android:id="@+id/bundle_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:drawablePadding="6dp"
         android:layout_marginStart="112dp"
+        android:layout_marginTop="24dp"
         android:textStyle="bold"
         android:text="@string/eskills_v2_home_card_title"
-        app:layout_constraintStart_toStartOf="@id/eskills_art"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/bundle_more"
-        app:layout_constraintTop_toTopOf="@id/eskills_logo"
-        app:layout_constraintBottom_toBottomOf="@id/eskills_logo"
+        app:layout_constraintTop_toTopOf="parent"
         android:fontFamily="sans-serif"
         android:textSize="18sp"
         android:textColor="@color/eskills_yellow"
@@ -74,8 +63,8 @@
         android:layout_gravity="end"
         android:text="@string/button_header_more"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/eskills_logo"
-        app:layout_constraintBottom_toBottomOf="@id/eskills_logo"
+        app:layout_constraintTop_toTopOf="@id/bundle_title"
+        app:layout_constraintBottom_toBottomOf="@id/bundle_title"
         style="@style/Aptoide.Button.Flat"
         />
 
@@ -85,8 +74,10 @@
       android:id="@+id/apps_list"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:layout_marginTop="24dp"
+      app:layout_constraintTop_toBottomOf="@id/bundle_header"
       android:clipChildren="false"
       android:orientation="horizontal"
       />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
